[workspace]
members = [
    "apps/jsonfmt",
]
resolver = "2"

[workspace.dependencies]
# eframe bundles egui and native backends
eframe = "0.33.0"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde = "1.0.228"
arboard = "3.6.1"
windows = { version = "0.62.2", features = [
    "ApplicationModel_DataTransfer",
    "Foundation",
    "Foundation_Collections",
] }
egui_json_tree = "0.14.2"
